--- a/package.json
+++ b/package.json
@@ -1,18 +1,16 @@
 {
   "scripts": {
     "dev": "cross-env NODE_ENV=development webpack-dev-server --open --hot",
-    "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
+    "build": "cross-env NODE_ENV=production webpack --progress --hide-modules",
+    "static":
+      "rm -rf docs && mkdir docs && mkdir docs/dist && cp index.html docs/index.html && cp -r dist/* docs/dist "
   },
   "dependencies": {
     "lit-html": "^0.8.0",
     "lodash": "^4.17.4",
     "redux": "^3.7.2"
   },
-  "browserslist": [
-    "> 1%",
-    "last 2 versions",
-    "not ie <= 8"
-  ],
+  "browserslist": ["> 1%", "last 2 versions", "not ie <= 8"],
   "devDependencies": {
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
