--- a/package.json
+++ b/package.json
@@ -2,21 +2,24 @@
   "scripts": {
     "dev": "cross-env NODE_ENV=development webpack-dev-server --open --hot",
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules",
-    "static":
-      "rm -rf docs && mkdir docs && mkdir docs/dist && mkdir docs/static && cp index.html docs/index.html && cp -r dist/* docs/dist && cp -r static/* docs/static"
+    "static": "rm -rf docs && mkdir docs && mkdir docs/dist && mkdir docs/static && cp index.html docs/index.html && cp -r dist/* docs/dist && cp -r static/* docs/static"
   },
   "dependencies": {
     "lit-html": "^0.8.0",
-    "lodash": "^4.17.4",
     "redux": "^3.7.2"
   },
-  "browserslist": ["> 1%", "last 2 versions", "not ie <= 8"],
+  "browserslist": [
+    "> 1%",
+    "last 2 versions",
+    "not ie <= 8"
+  ],
   "devDependencies": {
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-preset-env": "^1.6.0",
     "babel-preset-stage-3": "^6.24.1",
     "cross-env": "^5.0.5",
+    "css-loader": "^0.28.9",
     "webpack": "^3.6.0",
     "webpack-dev-server": "^2.9.1"
   }
